app/assets/stylesheets/module-nav.css.scss
.nav-list--item {
    margin: 0;
}
.nav-list--group {
    margin-left: 0;
}

@media only screen and (max-width: 767px) {
    .nav-list--group {
        margin-bottom: 20px;
    }
}
.nav-list--group-heading {
    margin-bottom: 6px;
    display: block;
}
.nav-list--group-item {
    line-height: 1.3;
}
.nav-list--group-item-link,
.nav-list--group-item-link:visited {
    color: $text_gray;
}
.nav-list--group-item-link:hover {
    color: $hotpink;
}

.nav-list--group-inline li {
    float: left;
    margin-right: 12px;
    line-height: .6;
}

